src/test/ui/type-alias-impl-trait/implied_lifetime_wf_check.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/implied_lifetime_wf_check.rs:13:6
   |
LL | impl<'a> AnotherTrait for <u32 as Mirror<'a>>::Item {
   |      ^^ unconstrained lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
